--- a/category_management.html
+++ b/category_management.html
@@ -208,7 +208,7 @@
                 <div class="container-fluid">
                     <div class="row mb-2">
                         <div class="col-sm-6">
-                            <h1>Category Table</h1>
+                          
                         </div>
                         <div class="col-sm-6">
                             <ol class="breadcrumb float-sm-right">
@@ -226,10 +226,20 @@
                 <div class="container-fluid">
                     <div class="card">
                         <div class="card-header">
-                            <button type="button" class="btn btn-warning add-btn"
-                                data-toggle="modal" data-target="#modal-add">
-                                Add Category
-                            </button>
+                            <div class="row">
+                                <div class="col-md-6">
+                                <h3>Category Management</h3>
+                            </div>
+
+                                <div class="col-md-6">
+                                    <button type="button" class="btn btn-warning add-btn" data-toggle="modal"
+                                        data-target="#modal-add" style="float:right">
+                                        <i class="nav-icon fas fa-plus"></i>
+                                        Add Category
+                                    </button>
+                                </div>
+
+                            </div>
                         </div>
 
                         <div class="card-body">
