--- a/slideshow_management.html
+++ b/slideshow_management.html
@@ -22,10 +22,10 @@
   <link rel="stylesheet" href="assets/vendors/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css" />
   <link rel="stylesheet" href="assets/vendors/plugins/datatables-responsive/css/responsive.bootstrap4.min.css" />
 
-   <!-- iCheck for checkboxes and radio inputs -->
-   <link rel="stylesheet" href="assets/vendors/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+  <!-- iCheck for checkboxes and radio inputs -->
+  <link rel="stylesheet" href="assets/vendors/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
 
-    <!-- Bootstrap4 Duallistbox -->
+  <!-- Bootstrap4 Duallistbox -->
   <link rel="stylesheet" href="assets/vendors/plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css">
 
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
@@ -211,7 +211,7 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>Slideshow Table</h1>
+
             </div>
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
@@ -229,10 +229,17 @@
         <div class="container-fluid">
           <div class="card">
             <div class="card-header">
-              <button type="button" class="btn btn-warning add-btn" data-toggle="modal" data-target="#modal-add">
-                Add Slideshow Photo
-              </button>
-              
+              <div class="row">
+                <div class="col-md-6">
+                  <h3>Slideshow Management</h3>
+                </div>
+                <div class="col-md-6">
+                  <button type="button" class="btn btn-warning add-btn" data-toggle="modal" data-target="#modal-add" style="float:right">
+                    <i class="nav-icon fas fa-plus"></i>
+                    Add Slideshow Photo
+                  </button>
+                </div>
+              </div>
             </div>
 
             <div class="card-body">
@@ -254,7 +261,7 @@
                       <td>
                         <button type="button" class="btn" data-toggle="modal" data-target="#modal-edit">
                           <i class="fas fa-edit"></i>
-                        </button> 
+                        </button>
                         |
                         <button type="button" class="btn" data-toggle="modal" data-target="#modal-delete">
                           <i class="fas fa-trash"></i>
@@ -262,43 +269,49 @@
                       </td>
                       <td>Ubur-ubur Lembur</td>
                       <td>Raditya Dika</td>
-                      <td><img src="assets/media/books/uburlembur.png" style="width: 10rem; display: block; margin-left: auto; margin-right: auto;"></td>
-                      <td><input type="checkbox" name="my-checkbox" checked data-bootstrap-switch data-off-color="danger" data-on-color="success"></td>
+                      <td><img src="assets/media/books/uburlembur.png"
+                          style="width: 10rem; display: block; margin-left: auto; margin-right: auto;"></td>
+                      <td><input type="checkbox" name="my-checkbox" checked data-bootstrap-switch
+                          data-off-color="danger" data-on-color="success"></td>
                     </tr>
 
                     <tr>
-                        <td>2</td>
-                        <td>
-                          <button type="button" class="btn" data-toggle="modal" data-target="#modal-edit">
-                            <i class="fas fa-edit"></i>
-                          </button> 
-                          |
-                          <button type="button" class="btn" data-toggle="modal" data-target="#modal-delete">
-                            <i class="fas fa-trash"></i>
-                          </button>
-                        </td>
-                        <td>Laskar Pelangi</td>
-                        <td>Andrea Hirata</td>
-                        <td><img src="assets/media/books/laskar.png" style="width: 10rem; display: block; margin-left: auto; margin-right: auto;"></td>
-                        <td><input type="checkbox" name="my-checkbox" checked data-bootstrap-switch data-off-color="danger" data-on-color="success"></td>
-                      </tr>
+                      <td>2</td>
+                      <td>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#modal-edit">
+                          <i class="fas fa-edit"></i>
+                        </button>
+                        |
+                        <button type="button" class="btn" data-toggle="modal" data-target="#modal-delete">
+                          <i class="fas fa-trash"></i>
+                        </button>
+                      </td>
+                      <td>Laskar Pelangi</td>
+                      <td>Andrea Hirata</td>
+                      <td><img src="assets/media/books/laskar.png"
+                          style="width: 10rem; display: block; margin-left: auto; margin-right: auto;"></td>
+                      <td><input type="checkbox" name="my-checkbox" checked data-bootstrap-switch
+                          data-off-color="danger" data-on-color="success"></td>
+                    </tr>
 
-                      <tr>
-                        <td>3</td>
-                        <td>
-                          <button type="button" class="btn" data-toggle="modal" data-target="#modal-edit">
-                            <i class="fas fa-edit"></i>
-                          </button> 
-                          |
-                          <button type="button" class="btn" data-toggle="modal" data-target="#modal-delete">
-                            <i class="fas fa-trash"></i>
-                          </button>
-                        </td>
-                        <td>Dilan 1990</td>
-                        <td>Raditya Dika</td>
-                        <td><img src="assets/media/books/dilan.png" style="width: 10rem; display: block; margin-left: auto; margin-right: auto;"></td>
-                        <td><input type="checkbox" name="my-checkbox" checked data-bootstrap-switch data-off-color="danger" data-on-color="success"></td>
-                      </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>
+                        <button type="button" class="btn" data-toggle="modal" data-target="#modal-edit">
+                          <i class="fas fa-edit"></i>
+                        </button>
+                        |
+                        <button type="button" class="btn" data-toggle="modal" data-target="#modal-delete">
+                          <i class="fas fa-trash"></i>
+                        </button>
+                      </td>
+                      <td>Dilan 1990</td>
+                      <td>Raditya Dika</td>
+                      <td><img src="assets/media/books/dilan.png"
+                          style="width: 10rem; display: block; margin-left: auto; margin-right: auto;"></td>
+                      <td><input type="checkbox" name="my-checkbox" checked data-bootstrap-switch
+                          data-off-color="danger" data-on-color="success"></td>
+                    </tr>
 
                   </tbody>
                 </table>
@@ -321,32 +334,32 @@
             </button>
           </div>
           <form role="form">
-          <div class="modal-body">
-            <div class="card-body">
-              <div class="form-group">
-                <label for="inputTitle">Title</label>
-                <input type="text" class="form-control" id="inputTitle" placeholder="Enter Title" required>
-              </div>
-              <div class="form-group">
-                <label for="inputSubTitle">Sub Title</label>
-                <input type="text" class="form-control" id="inputSubTitle" placeholder="Enter Sub Title" required>
-              </div>
-              <div class="form-group">
-                <label for="exampleInputFile">Choose Image</label>
-                <div class="input-group">
-                  <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="exampleInputFile">
-                    <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+            <div class="modal-body">
+              <div class="card-body">
+                <div class="form-group">
+                  <label for="inputTitle">Title</label>
+                  <input type="text" class="form-control" id="inputTitle" placeholder="Enter Title" required>
+                </div>
+                <div class="form-group">
+                  <label for="inputSubTitle">Sub Title</label>
+                  <input type="text" class="form-control" id="inputSubTitle" placeholder="Enter Sub Title" required>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputFile">Choose Image</label>
+                  <div class="input-group">
+                    <div class="custom-file">
+                      <input type="file" class="custom-file-input" id="exampleInputFile">
+                      <label class="custom-file-label" for="exampleInputFile">Choose file</label>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="modal-footer justify-content-between">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="submit" class="btn btn-warning">Save changes</button>
-          </div>
-        </form>
+            <div class="modal-footer justify-content-between">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-warning">Save changes</button>
+            </div>
+          </form>
         </div>
         <!-- /.modal-content -->
       </div>
@@ -365,32 +378,32 @@
             </button>
           </div>
           <form role="form">
-          <div class="modal-body">
-            <div class="card-body">
-              <div class="form-group">
-                <label for="inputTitle">Title</label>
-                <input type="text" class="form-control" id="inputTitle" value="Ubur-ubur Lembur" required>
-              </div>
-              <div class="form-group">
-                <label for="inputSubTitle">Sub Title</label>
-                <input type="text" class="form-control" id="inputCategoryName" value="Raditya Dika" required>
-              </div>
-              <div class="form-group">
-                <label for="exampleInputFile">Change Image</label>
-                <div class="input-group">
-                  <div class="custom-file">
-                    <input type="file" class="custom-file-input" id="exampleInputFile">
-                    <label class="custom-file-label" for="exampleInputFile">uburlembur.png</label>
+            <div class="modal-body">
+              <div class="card-body">
+                <div class="form-group">
+                  <label for="inputTitle">Title</label>
+                  <input type="text" class="form-control" id="inputTitle" value="Ubur-ubur Lembur" required>
+                </div>
+                <div class="form-group">
+                  <label for="inputSubTitle">Sub Title</label>
+                  <input type="text" class="form-control" id="inputCategoryName" value="Raditya Dika" required>
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputFile">Change Image</label>
+                  <div class="input-group">
+                    <div class="custom-file">
+                      <input type="file" class="custom-file-input" id="exampleInputFile">
+                      <label class="custom-file-label" for="exampleInputFile">uburlembur.png</label>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="modal-footer justify-content-between">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-warning">Save changes</button>
-          </div>
-        </form>
+            <div class="modal-footer justify-content-between">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+              <button type="submit" class="btn btn-warning">Save changes</button>
+            </div>
+          </form>
         </div>
         <!-- /.modal-content -->
       </div>
@@ -413,7 +426,8 @@
           </div>
           <div class="modal-footer justify-content-between">
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-warning" data-toggle="modal" data-target="#DeleteSuccess" data-dismiss="modal">Delete</button>
+            <button type="submit" class="btn btn-warning" data-toggle="modal" data-target="#DeleteSuccess"
+              data-dismiss="modal">Delete</button>
           </div>
         </div>
         <!-- /.modal-content -->
@@ -424,25 +438,25 @@
 
     <!--Delete Completed-->
     <div class="modal fade" id="DeleteSuccess" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabesl"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Delete Complete!</h5>
-              <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">×</span>
-              </button>
-            </div>
-            <div class="modal-body">
+      aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Delete Complete!</h5>
+            <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
             <img class="check" src="./assets/media/check.png">
             <p>Data has been deleted</p>
           </div>
-            <div class="modal-footer">
-              <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
-            </div>
+          <div class="modal-footer">
+            <button class="btn btn-secondary" type="button" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
+    </div>
 
     <!-- /.content-wrapper -->
     <div w3-include-html="include_footer.html"></div>
@@ -483,28 +497,28 @@
   <script src="assets/js/customfileinput.js"></script>
 
   <!-- Bootstrap Switch -->
-<script src="assets/vendors/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
+  <script src="assets/vendors/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
 
-<!-- bootstrap color picker -->
-<script src="assets/vendors/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js"></script>
+  <!-- bootstrap color picker -->
+  <script src="assets/vendors/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js"></script>
 
-<script>
-  $(function () {
-    //Colorpicker
-    $('.my-colorpicker1').colorpicker()
-    //color picker with addon
-    $('.my-colorpicker2').colorpicker()
+  <script>
+    $(function () {
+      //Colorpicker
+      $('.my-colorpicker1').colorpicker()
+      //color picker with addon
+      $('.my-colorpicker2').colorpicker()
 
-    $('.my-colorpicker2').on('colorpickerChange', function(event) {
-      $('.my-colorpicker2 .fa-square').css('color', event.color.toString());
-    });
+      $('.my-colorpicker2').on('colorpickerChange', function (event) {
+        $('.my-colorpicker2 .fa-square').css('color', event.color.toString());
+      });
 
-    $("input[data-bootstrap-switch]").each(function(){
-      $(this).bootstrapSwitch('state', $(this).prop('checked'));
-    });
+      $("input[data-bootstrap-switch]").each(function () {
+        $(this).bootstrapSwitch('state', $(this).prop('checked'));
+      });
 
-  })
-</script>
+    })
+  </script>
 </body>
 
 </html>
