--- a/change_password.html
+++ b/change_password.html
@@ -230,50 +230,51 @@
       </div>
       <!-- /.sidebar -->
     </aside>
-    
-    <!-- CHANGE PASSWORD PAGE -->
-    <div class="content-changepwd">
-        <h3 class="changepwd-title">Change Password</h3>
-        <form role="form" id="changePwdForm">
-            <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-9">
-                <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="example@gmail.com">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label">Old Password</label>
-                <div class="col-sm-9">
-                <input type="password" name="oldPassword" class="form-control" id="inputPassword3">
-                <small id="passwordHelpBlock" class="form-text text-muted">
-                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-                </small>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label">New Password</label>
-                <div class="col-sm-9">
-                <input type="password" name="newPassword"class="form-control" id="inputPassword3">
-                <small id="passwordHelpBlock" class="form-text text-muted">
-                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-                </small>
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-2 col-form-label">Verify Password</label>
-                <div class="col-sm-9">
-                <input type="password" name="verifyPassword"class="form-control" id="inputPassword3">
-                <small id="passwordHelpBlock" class="form-text text-muted">
-                    Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
-                </small>
-                </div>
-            </div>
-            <div class="save-pwd">
-                <button id="close-change"type="button" class="btn btn-light">Close</button>
-                <button id="save-change" type="button" class="btn btn-warning">Save</button>
-            </div>
-        </form>
 
+    <!-- CHANGE PASSWORD PAGE -->
+    <div class="container-changepwd">
+        <div class="content-changepwd">
+            <h3 class="changepwd-title">Change Password</h3>
+            <form role="form" id="changePwdForm">
+                <div class="form-group row">
+                    <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+                    <div class="col-sm-9">
+                    <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="example@gmail.com">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputPassword3" class="col-sm-2 col-form-label">Old Password</label>
+                    <div class="col-sm-9">
+                    <input type="password" name="oldPassword" class="form-control" id="inputPassword3">
+                    <small id="passwordHelpBlock" class="form-text text-muted">
+                        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                    </small>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputPassword3" class="col-sm-2 col-form-label">New Password</label>
+                    <div class="col-sm-9">
+                    <input type="password" name="newPassword"class="form-control" id="inputPassword3">
+                    <small id="passwordHelpBlock" class="form-text text-muted">
+                        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                    </small>
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputPassword3" class="col-sm-2 col-form-label">Verify Password</label>
+                    <div class="col-sm-9">
+                    <input type="password" name="verifyPassword"class="form-control" id="inputPassword3">
+                    <small id="passwordHelpBlock" class="form-text text-muted">
+                        Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
+                    </small>
+                    </div>
+                </div>
+                <div class="save-pwd">
+                    <button id="close-change"type="button" class="btn btn-light">Close</button>
+                    <button id="save-change" type="button" class="btn btn-warning">Save</button>
+                </div>
+            </form>
+        </div>
     </div>
     
 
