--- a/userprofil.html
+++ b/userprofil.html
@@ -303,6 +303,9 @@
                     <span id="mybalance">Rp 20.000,-</span>
                     <hr>
                 </div>
+                <div class="data">
+                  <a href="change_password.html"><strong>Change Password</strong></a>
+                </div>
               </div>
           </div>
       </div>  
