--- a/change_password.html
+++ b/change_password.html
@@ -239,13 +239,13 @@
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-9">
-                    <input type="email" name="email" class="form-control" id="inputEmail3" placeholder="example@gmail.com">
+                    <input type="email" name="email" class="form-control" id="inputEmail" placeholder="example@gmail.com" autocomplete="off">
                     </div>
                 </div>
                 <div class="form-group row">
                     <label for="inputPassword3" class="col-sm-2 col-form-label">Old Password</label>
                     <div class="col-sm-9">
-                    <input type="password" name="oldPassword" class="form-control" id="inputPassword3">
+                    <input type="password" name="oldPassword" class="form-control" id="inputOldPassword" autocomplete="off">
                     <small id="passwordHelpBlock" class="form-text text-muted">
                         Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                     </small>
@@ -254,7 +254,7 @@
                 <div class="form-group row">
                     <label for="inputPassword3" class="col-sm-2 col-form-label">New Password</label>
                     <div class="col-sm-9">
-                    <input type="password" name="newPassword"class="form-control" id="inputPassword3">
+                    <input type="password" name="newPassword"class="form-control" id="inputNewPassword" autocomplete="off">
                     <small id="passwordHelpBlock" class="form-text text-muted">
                         Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                     </small>
@@ -263,7 +263,7 @@
                 <div class="form-group row">
                     <label for="inputPassword3" class="col-sm-2 col-form-label">Verify Password</label>
                     <div class="col-sm-9">
-                    <input type="password" name="verifyPassword"class="form-control" id="inputPassword3">
+                    <input type="password" name="verifyPassword"class="form-control" id="inputVerifyPassword" autocomplete="off">
                     <small id="passwordHelpBlock" class="form-text text-muted">
                         Your password must be 8-20 characters long, contain letters and numbers, and must not contain spaces, special characters, or emoji.
                     </small>
@@ -271,7 +271,7 @@
                 </div>
                 <div class="save-pwd">
                     <button id="close-change"type="button" class="btn btn-light">Close</button>
-                    <button id="save-change" type="button" class="btn btn-warning">Save</button>
+                    <button id="save-change" type="submit" class="btn btn-warning">Save</button>
                 </div>
             </form>
         </div>
@@ -284,11 +284,12 @@
 
 
 <!-- jquery-validation -->
-<script src="../../plugins/jquery-validation/jquery.validate.min.js"></script>
-<script src="../../plugins/jquery-validation/additional-methods.min.js"></script>
+<script src="assets/vendors/plugins/jquery-validation/jquery.validate.min.js"></script>
+<script src="assets/vendors/plugins/jquery-validation/additional-methods.min.js"></script>
 <!-- jQuery -->
 <script type="text/javascript" src="./assets/vendors/plugins/jquery/jquery.min.js"></script>
-
+<!-- AdminLTE App -->
+<script src="assets/vendors/dist/js/adminlte.min.js"></script>
 
 
 
