--- a/slideshow_management.html
+++ b/slideshow_management.html
@@ -178,7 +178,7 @@
             <div class="container-fluid">
               <div class="row mb-2">
                 <div class="col-sm-6">
-    
+                  <h3>Slideshow Management</h3>
                 </div>
                 <div class="col-sm-6">
                   <ol class="breadcrumb float-sm-right">
@@ -198,12 +198,12 @@
                 <div class="card-header">
                   <div class="row">
                     <div class="col-md-6">
-                      <h3>Slideshow Management</h3>
+                      
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 ctm-responsive">
                       <button type="button" class="btn btn-warning add-btn" data-toggle="modal" data-target="#modal-add" style="float:right">
                         <i class="nav-icon fas fa-plus"></i>
-                        Add Slideshow Photo
+                        &nbsp Add Slideshow Photo
                       </button>
                     </div>
                   </div>
