--- a/history.html
+++ b/history.html
@@ -71,98 +71,7 @@
       </ul>
     </nav>
     <!-- /.navbar -->
-    <aside class="main-sidebar elevation-4 sidebar-light-primary">
-      <!-- Brand Logo -->
-      <a href="index.html" class="brand-link">
-        <img src="./auth/assets/images/bookshelf.png" alt="Maxwell Library" style="height: 2rem; margin-left: .7rem;">
-        <span class="brand-text font-weight-light">Maxwell Library</span>
-      </a>
-
-      <!-- Sidebar -->
-      <div
-        class="sidebar os-host os-theme-light os-host-overflow os-host-overflow-y os-host-resize-disabled os-host-scrollbar-horizontal-hidden os-host-transition">
-        <div class="os-resize-observer-host observed">
-          <div class="os-resize-observer" style="left: 0px; right: auto;"></div>
-        </div>
-        <div class="os-size-auto-observer observed" style="height: calc(100% + 1px); float: left;">
-          <div class="os-resize-observer"></div>
-        </div>
-        <div class="os-content-glue" style="margin: 0px -8px; width: 249px; height: 514px;"></div>
-        <div class="os-padding">
-          <div class="os-viewport os-viewport-native-scrollbars-invisible" style="overflow-y: scroll;">
-            <div class="os-content" style="padding: 0px 8px; height: 100%; width: 100%;">
-              <!-- Sidebar user panel (optional) -->
-              <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-                <div class="image my-center">
-                  <img src="./assets/media/user/profile.png" class="img-circle elevation-2 profile-img-custom" alt="User Image">
-                </div>
-                <div class="info">
-                  <a href="#" class="d-block user-name">Niki Zefanya</a>
-                </div>
-              </div>
-
-              <!-- Sidebar Menu -->
-              <nav class="mt-2">
-                <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu"
-                  data-accordion="false">
-                  <!-- Add icons to the links using the .nav-icon class
-                   with font-awesome or any other icon font library -->
-                  <li class="nav-item">
-                    <a href="index.html" class="nav-link " id="index">
-                      <i class="nav-icon fas fa-book"></i>
-                      <p>
-                        Explore
-                      </p>
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="history.html" class="nav-link active" id="history">
-                      <i class="nav-icon fas fa-history"></i>
-                      <p>
-                        History
-                      </p>
-                    </a>
-                  </li>
-
-                  <!-- if login -->
-                  <li class="nav-item">
-                    <a href="#" class="nav-link" onclick="showModal('add')">
-                      <i class="nav-icon fas fa-plus"></i>
-                      <p>
-                        Add Book
-                      </p>
-                    </a>
-                  </li>
-
-                  <li class="nav-item">
-                    <a href="auth/index.html" class="nav-link" data-target="#modal-xl">
-                      <i class="nav-icon fas fa-sign-out-alt"></i>
-                      <p>
-                        Log Out
-                      </p>
-                    </a>
-                  </li>
-
-                </ul>
-              </nav>
-              <!-- /.sidebar-menu -->
-            </div>
-          </div>
-        </div>
-        <div class="os-scrollbar os-scrollbar-horizontal os-scrollbar-unusable os-scrollbar-auto-hidden">
-          <div class="os-scrollbar-track">
-            <div class="os-scrollbar-handle" style="width: 100%; transform: translate(0px, 0px);"></div>
-          </div>
-        </div>
-        <div class="os-scrollbar os-scrollbar-vertical os-scrollbar-auto-hidden">
-          <div class="os-scrollbar-track">
-            <div class="os-scrollbar-handle" style="height: 49.8548%; transform: translate(0px, 0px);"></div>
-          </div>
-        </div>
-        <div class="os-scrollbar-corner"></div>
-      </div>
-      <!-- /.sidebar -->
-    </aside>
+    <div w3-include-html="include_sidebar.html"></div>
     <!-- Content Wrapper. Contains page content -->
 
     <div class="content-wrapper">
