--- a/include_sidebar.html
+++ b/include_sidebar.html
@@ -114,6 +114,12 @@
                       <p>Donation Management</p>
                     </a>
                   </li>
+                  <li class="nav-item">
+                    <a href="top_up_management.html" class="nav-link">
+                      <i class="fa fa-credit-card nav-icon"></i>
+                      <p>Top Up Management</p>
+                    </a>
+                  </li>
                 </ul>
               </li>
               <li class="nav-item">
