--- a/top_up.html
+++ b/top_up.html
@@ -143,14 +143,15 @@
                                                 <div class="col-5">
                                                     <h2 class="steps">Step 4 - 4</h2>
                                                 </div>
-                                            </div> <br><br>
+                                            </div> 
                                             <div class="row row-cols-1 row-cols-md-1">                                                
                                                 <div class="md-2"><input  id="passwordconfirm" type="password" placeholder="Password" ></div>
                                                 <div class="md-2"><input  id="passwordconfirm2" type="password" placeholder="Confirm Password"></div>
-                                            </div>                                            
-                                            <input type="button"W onclick="checkpassword()" value="Submit">
-                                        </div>
-                                    </fieldset>
+                                            </div>
+                                        </div> 
+                                        <input type="button" onclick="checkpassword()" value="Submit">                                         
+                                        <input type="button" name="previous" class="previous action-button-previous" value="Previous" />
+                                    </fieldset>                                    
                                 </form>
                             </div>
                         </div>
@@ -187,6 +188,7 @@
         <script src='https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
         <script src="http://jquerypost.com/cdn/jquery-1.12.4.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>        
 </body>
 
 </html>
