--- a/fine_management.html
+++ b/fine_management.html
@@ -90,6 +90,7 @@
                                                 <td class="text-center py-0 align-middle">
                                                     <div class="btn-group btn-group-sm">
                                                       <a href="payment.html" class="btn btn-primary" title="Accept" ><i class="fas fa-check-square"></i></a>
+                                                      <a href="detail_invoice.html" class="btn btn-info" title="Detail" ><i class="fas fa-eye"></i></a>
                                                     </div>
                                                 </td>
                                                 <td>Chandra</td>
